@@ -21,14 +21,14 @@
 # software solely pursuant to the terms of the relevant commercial agreement.
 
 
-from distutils.version import StrictVersion
 from unittest import TestCase
 from unittest.mock import PropertyMock, patch
 
+from crate.client._pep440 import Version
 from crate.crash.command import CrateShell
 from crate.crash.sysinfo import Result as Res, SysInfoCommand
 
-CRATE_VERSION = StrictVersion("0.55.2")
+CRATE_VERSION = Version("0.55.2")
 assert CrateShell, "Used for patch"
 
 
